force-app/main/default/objects/Child_Objects__c/Child_Objects__c.object-meta.xml
<CustomObject>
    <label>Child Object</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Child Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Child Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>