force-app/main/default/objects/Child_Objects__c/fields/CO_Name__c.field-meta.xml
<CustomField>
    <fullName>CO_Name__c</fullName>
    <label>CO Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>