force-app/main/default/objects/Child_Objects__c/fields/CO_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>CO_Plan_Name__c</fullName>
    <label>CO Plan Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>