force-app/main/default/objects/Child_Objects__c/fields/ParentObject__c.field-meta.xml
<CustomField>
    <fullName>ParentObject__c</fullName>
    <label>ParentObject</label>
    <referenceTo>ParentObject__c</referenceTo>
    <relationshipLabel>Child Objects</relationshipLabel>
    <relationshipName>Child_Objects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>